# GEPA-AI-researcher

./: .gitignore  README.md  pyproject.toml  rephase_2_4.py  requirements.txt
docs/: GEPA_candidate_card_opt.md  GEPA_v1_routine.md  GEPA_v2_architecture_ref.md  apptainer_executor_framework.md  apptainer_setup_guide.md  claude_code_setup.md  gepa_ai_researcher_omilrec_group_meeting_report.md  isolation-opt-ref.md  omilrec_gepa_loop_status_and_p0_risks.md  orchestrator_design.md  orchestrator_ver1.md  p1_completion_report.md  p1_display_logging_analysis.md  p2_completion_report.md  parent_id_fix_report.md  v1_routine.md
examples/: test_config.json
gepa_researcher/: __init__.py  adapters.py  admission.py  agent_client.py  agent_components.py  cli.py  context.py  context_views.py  display.py  executor.py  gate.py  gater.py  judger.py  manager.py  orchestrator.py  pareto.py  pool.py  proposer.py  provenance.py  registry.py  runtime.py  runtime_backend.py  schemas.py  score_matrix.py  store.py  usage.py  workspace.py
prompts/: gater.md  judger.md  proposer.md
tests/: _fakes.py  test_agent_client.py  test_agent_components.py  test_apptainer_integration.py  test_apptainer_real.py  test_candidate_execution_domain.py  test_candidate_execution_stores.py  test_candidate_kernel_orchestrator.py  test_candidate_scheduler.py  test_cli_materialize.py  test_config_system.py  test_container_image.py  test_context_blocks.py  test_context_view_builder.py  test_context_views.py  test_display.py  test_entity_store.py  test_execution_materializer.py  test_execution_service.py  (+12 more)
(+87 files in other folders)
